snapshots/syntax/library/statements/kill/kill_module_level.snap
---
source: src/syntax/library/statements/kill.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: KillStatement
      children:
        - kind: KillKeyword
          text: Kill
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"temp.dat\""
        - kind: Newline
          text: "\n"
